
25. Fix: mysql.clear, mysql.will_rollback_on_finalize, mysql.is_trace, db.clear, db.will_rollback_on_finalize, db.is_trace no longer run during a syntax check.

26. Fix: mysql.tuples returns mysql.tuple_count_type as documented, not a natural.  db.tuples returns db.tuple_count_type as document, not a natural.

27. Fix: backported some fixes from APQ 3.0 to APQ 2.1.  Fixed closed trace file bugs, disconnect/reconnect bug and several others.

28. Fix: global profiles work correctly.  (A line was mistakenly deleted in source code at some point.)

29. Fix: stats package functions now appear as functions not procedures (this did not affect their execution).

30. Fix: pen.get_pen_brush existed but wasn't visible.  Now is visible.

31. Change: profile files and include files are now checked that they are not empty, not world-readable.

32. Fix: command_line.argument_count now returns a natural as documenteded, not a universal numeric. command_name now returns a string as document, not a universal string.

33. New: mysqlm package, mysql with multiple connections.  New mysqlm.fetch_values procedure.

34. Change: Most built-in procedures and some functions now run using callbacks which should run slightly faster.

35. Fix: mysql.list now limits output to the current database, has fixed table type and engine layout and has been upgraded to show info properly for newer versions of MySQL and MariaDB.

36. Fix: assignments and user-defind subprogram parameters for integer subtypes (integer, positive, natural) to be assigned to the larger ranged integer type.

37. New: mysqlm.append_for_insert and mysqlm.append_for_update procedures that take a record as a parameter.

38. New: directory_operations.open, close, is_open, read.  New data type directory_operations.dir_file_id.
